K1J-1237: Refactor mapping structure to use CustomMapperId for UnifiedDiagnosisList and CodeListToBoolean